# rustracer

./: .gitignore  Cargo.toml  README  README.md  generate_and_launch.sh
generator/: generator.py
scenes/: scene_1.json  scene_1.txt  scene_2.json  scene_2.txt  scene_3.txt  scene_4.txt
src/: animation.rs  app.rs  camera.rs  gui.rs  loader.rs  main.rs  material.rs  ray.rs  renderer.rs  scene.rs  sphere.rs  support.rs  vec3.rs
